[gd_scene load_steps=11 format=3 uid="uid://cn5u62841560f"]

[ext_resource type="Script" uid="uid://bo2a8hjo762mi" path="res://Item/scripts/GravitationalField.gd" id="1_561lv"]
[ext_resource type="Texture2D" uid="uid://frn61bvkvvd2" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f0.png" id="2_skfow"]
[ext_resource type="Texture2D" uid="uid://e3dvduh1qasd" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f1.png" id="3_853qn"]
[ext_resource type="Texture2D" uid="uid://pd8s0pqce2ye" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f2.png" id="4_i5bhf"]
[ext_resource type="Texture2D" uid="uid://bg7if4bnr5edb" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_f3.png" id="5_u1iwg"]
[ext_resource type="Texture2D" uid="uid://blvnlh1vmf068" path="res://Sprite/spriteimage/item/gravityfield.png" id="6_5blqe"]

[sub_resource type="Animation" id="Animation_cd68o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_skfow")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fymlx"]
resource_name = "emit"
length = 3.0
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.00706, 2, 3.01034),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_skfow"), ExtResource("3_853qn"), ExtResource("4_i5bhf"), ExtResource("5_u1iwg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0108286, 1.00706, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8gqf"]
_data = {
&"RESET": SubResource("Animation_cd68o"),
&"emit": SubResource("Animation_fymlx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5gy3d"]
radius = 180.0

[node name="GravitationalField" type="Node2D"]
script = ExtResource("1_561lv")
slow_duration = 1
no_enemy_slow_to_evo = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i8gqf")
}
speed_scale = 5.0

[node name="ItemSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("6_5blqe")
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://Sprite/spriteimage/item",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Sprite/item/gravityfield.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "8c67160a46384fc7893dcb1ffe4cf58c"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 2)
collision_layer = 10
collision_mask = 10
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5gy3d")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(9.49999, -2.5)
scale = Vector2(19.4375, 20.4375)
texture = ExtResource("2_skfow")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
